# covau-app

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/androidTest/java/com/thrombe/covau/: ExampleInstrumentedTest.kt
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/thrombe/covau/: Covau.java  MainActivity.kt  PlayerService.kt
android/app/src/main/java/com/thrombe/covau/ui/theme/: Color.kt  Theme.kt  Type.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/test/java/com/thrombe/covau/: ExampleUnitTest.kt
android/covaulib/: Cargo.toml  build.rs
android/covaulib/src/: lib.rs
android/gradle/wrapper/: gradle-wrapper.properties
app/: Cargo.toml  build.rs
app/src/: cli.rs  main.rs
covau/: Cargo.toml  build.rs
covau/src/: cli.rs  config.rs  db.rs  lib.rs  musimanager.rs  native.rs  wasm.rs  yt.rs
covau/src/musiplayer/: libmpv_player.rs
covau/src/server/: db.rs  mbz.rs  mod.rs  player.rs  routes.rs
electron/: README.md  bun.lockb  index.html  main.js  package.json  tsconfig.json  vite.config.electron.ts  vite.config.ts
electron-vite/: bun.lockb  package.json
electron-vite/src/: App.svelte
electron-vite/src-electron/: main.ts
electron/src/: App.svelte  routes.ts
electron/src-electron/: main.ts  preload.ts
electron/src/lib/: icons.ts  local_player.ts  musiplayer.ts  player.ts  rc.ts  server.ts  stores.ts  utils.ts  virtual.ts
electron/src/lib/components/: AudioListItem.svelte  BlobBg.svelte  DetailItem.svelte  Explorer.svelte  Home.svelte  InputBar.svelte  Loading.svelte  Play.svelte  PlayBar.svelte  ProgressBar.svelte  Queue.svelte  Scrollbar.svelte  SongBrowser.svelte  ThreeDotMenu.svelte  UiDetailItem.svelte  VibeWrap.svelte  Video.svelte  VirtualScrollable.svelte
electron/src/lib/local/: Play.svelte  PlayBar.svelte  Queue.svelte  SongBrowser.svelte  Vibe.svelte  VibeWrap.svelte  db.ts  player.ts  queue.ts
electron/src/lib/player/: audio.ts  yt.ts
electron/src/lib/prompt/: Prompt.svelte  prompt.ts
electron/src/lib/searcher/: db.ts  item.ts  mbz.ts  mixins.ts  searcher.ts  song_tube.ts  tube.ts
electron/src/lib/sync/: PlayBar.svelte  Queue.svelte  SongBrowser.svelte  Vibe.svelte  Video.svelte  player.ts
electron/src/lib/toast/: Toasts.svelte  toast.ts
electron/src/lib/tooltip/: Tooltip.svelte
electron/src/routes/: Play.svelte  Vibe.svelte
electron/src/types/: covau.ts  db.ts  mbz.ts  musimanager.ts  server.ts  yt.ts
qweb/: .gitignore  CMakeLists.txt  Main.qml  main.cpp  main.h  main.ui
qweb/qweb/: CMakeLists.txt
src/: cli.rs  covau_types.rs  db.rs  lib.rs  main.rs  mbz.rs  musimanager.rs  native.rs  server.rs  webui.rs  yt.rs
src/musiplayer/: gst_player.rs  mod.rs  mpv_player.rs
src/server/: db.rs  mbz.rs  message_server.rs  mod.rs  player.rs  routes.rs  server.rs
ui/: bun.lockb  index.html  package.json  tsconfig.json  vite.config.ts
ui/src/: routes.ts
ui/src/lib/: cyclic.ts  icons.ts  server.ts  stores.ts  utils.ts
ui/src/lib/components/: Audio.svelte  AudioListItem.svelte  BlobBg.svelte  DetailItem.svelte  Loading.svelte  Scrollbar.svelte  Video.svelte
ui/src/lib/local/: Play.svelte  PlayBar.svelte  SongBrowser.svelte  Vibe.svelte  VibeWrap.svelte  queue.ts
ui/src/lib/player/: audio.ts  yt.ts
ui/src/lib/prompt/: prompt.ts
ui/src/lib/searcher/: db.ts  item.ts  mbz.ts  mixins.ts  searcher.ts  song_tube.ts  tube.ts
ui/src/lib/sync/: PlayBar.svelte  Queue.svelte  player.ts
ui/src/lib/toast/: toast.ts
ui/src/types/: covau.ts  mbz.ts  musimanager.ts  types.ts
wasm/: Cargo.toml
wasm/src/: lib.rs
zig/: .gitignore  build.zig  build.zig.zon
zig/src/: main.zig
zweb/: build.zig  build.zig.zon
zweb/src/: main.zig
