[package]
name = "covau-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
fern = "0.6.2"
futures = "0.3.30"
log = "0.4.21"
musicbrainz_rs = "0.5.0"
reqwest =  { version = "0.11", features = [ "blocking" ] }
serde = "1.0.202"
serde_json = "1.0.117"
specta = "1.0.5"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
ulid = { version = "1.1.2", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
warp = "0.3.7"
webui-rs = { git = "https://github.com/webui-dev/rust-webui/", branch = "main" }
