[package]
name = "covau-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
bytes = "1.6.0"
fern = "0.6.2"
futures = "0.3.30"
log = "0.4.21"
musicbrainz_rs = "0.5.0"
reqwest =  { version = "0.11", features = [ "blocking" ] }
serde = "1.0.202"
serde_json = "1.0.117"
specta = "1.0.5"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
ulid = { version = "1.1.2", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
warp = "0.3.7"
webui-rs = { git = "https://github.com/webui-dev/rust-webui/", branch = "main" }

gstreamer = {version = "0.17", optional = true}
gstreamer-player = {version = "0.17", optional = true}
mpv = {version = "0.2.3", optional = true}
# libmpv = {version = "2.0", optional = true}
derivative = "2.2.0"
intrusive-collections = "0.9.6"
sea-orm = { version = "0.12.15", features = ["sqlx-sqlite", "runtime-tokio", "macros", "runtime-tokio-native-tls"] }
sublime_fuzzy = "0.7.0"

[features]
# default = ["player-gst", "force"]
default = ["player-mpv", "force"]
# default = ["player-libmpv", "force"]
force = []
player-mpv = ["mpv"]
player-gst = ["gstreamer-player", "gstreamer"]
# player-libmpv = ["libmpv"] # didn't impliment this one yet

[target.'cfg(all(any(target_os = "windows", target_os = "linux"), target_arch = "x86_64"))'.dependencies]
gstreamer = {version = "0.17"}
gstreamer-player = {version = "0.17"}

[target.'cfg(all(target_os = "android", target_arch = "aarch64"))'.dependencies]
mpv = {version = "0.2.3"}
