[package]
name = "covau"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
fern = "0.6.2"
futures = "0.3.30"
log = "0.4.21"
reqwest = { version = "0.11", features = ["blocking", "stream"] }
serde = "1.0.202"
serde_json = "1.0.117"
specta = "1.0.5"
ulid = { version = "1.1.2", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4", "fast-rng"] }
derivative = "2.2.0"
async-trait = "0.1.80"

base64 = { version = "0.22.1", optional = true }
bytes = { version = "1.6.0", optional = true }
musicbrainz_rs = { version = "0.5.0", optional = true }
tokio = { version = "1.37.0", features = ["full"], optional = true }
tokio-stream = { version = "0.1.15", optional = true }
warp = { version = "0.3.7", optional = true }
tao = { version = "0.30.0", optional = true }
wry = { version = "0.42.0", optional = true, features = ["devtools"] }
webui-rs = { git = "https://github.com/webui-dev/rust-webui/", branch = "main", optional = true }
intrusive-collections = { version ="0.9.6", optional = true }
sea-orm = { version = "0.12.15", features = ["sqlx-sqlite", "runtime-tokio", "macros", "runtime-tokio-native-tls"], optional = true }
sublime_fuzzy = { version = "0.7.0", optional = true }
rust-embed = { version = "8.4.0", features = [
  # "debug-embed",
  # "compression",
], optional = true }
mime_guess = { version = "2.0.4", optional = true }
dirs = { version = "5.0.1", optional = true }
clap = { version = "4.5.8", features = ["derive"], optional = true }
toml = { version = "0.8.14", optional = true }
shellexpand = { version = "3.1.0", optional = true }

gstreamer = {version = "0.17", optional = true}
gstreamer-player = {version = "0.17", optional = true}
mpv = {version = "0.2.3", optional = true}
libmpv = {version = "2.0", optional = true}

wasm-bindgen = { version = "0.2.92", optional = true }
wasm-bindgen-futures = { version = "0.4.42", optional = true }
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = { version = "0.3.69", optional = true }
web-sys = { version = "0.3.69", optional = true }
console_log = { version = "1.0.0", optional = true }
# gloo-utils = { version = "0.2.0", optional = true }
tsify-next = {version = "0.5.3", optional = true }

[features]
# default = ["player-gst"]
# default = ["player-mpv"]
# default = ["player-libmpv"]
player-mpv = ["mpv"]
player-gst = ["gstreamer-player", "gstreamer"]
player-libmpv = ["libmpv"] # didn't impliment this one yet

qweb-dylib = []
qweb-bin = []

# webkit chokes when wasm is imported
webui = [ "webui-rs" ]
webview = []
web-wry = [ "wry", "tao" ]

wasmdeps = [
  "wasm-bindgen",
  "wasm-bindgen-futures",
  "console_error_panic_hook",
  "js-sys",
  "web-sys",
  "console_log",
  # "gloo-utils",
  "tsify-next",

  "base64",
]

bindeps = [
  "player-mpv",
  "bytes",
  "base64",
  "musicbrainz_rs",
  "tokio",
  "tokio-stream",
  "warp",
  "intrusive-collections",
  "sea-orm",
  "sublime_fuzzy",
  "rust-embed",
  "mime_guess",
  "dirs",
  "clap",
  "toml",
  "shellexpand",
  # "qweb-dylib",
  # "qweb-bin",
  # "webui",
  "web-wry",
]

[[bin]]
name = "covau"
required-features = ["bindeps"]

[build-dependencies]
cmake = "0.1.50"

[lib]
name = "covau_app_wasm"
crate-type = ["cdylib", "rlib"]
required-features = ["wasmdeps"]
