[package]
name = "covau"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libcovau = { path = "../covau", features = [ "bindeps" ] }
serde = "1.0.202"

toml = { version = "0.8.14" }

tao = { version = "0.30.0", optional = true }
wry = { version = "0.42.0", optional = true, features = ["devtools"] }

[build-dependencies]
cmake = "0.1.50"

[features]
qweb-dylib = [ ]
qweb-bin = [ ]

# webkit chokes when wasm is imported
tao-wry = [ "tao", "wry" ]

default = [ "qweb-bin" ]

[[bin]]
name = "covau"

